# pulse-framework

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-test.sh  post.lua  run_tests.sh
cli/: Cargo.toml
cli/src/: main.rs
dashboard/: Cargo.toml  index.html
dashboard/src/: main.rs
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/chat/static/: index.html
examples/wiki/: .env.example  Cargo.toml  README.md  run.sh
examples/wiki/src/: api.rs  main.rs  model.rs  revision.rs  service.rs
examples/wiki/static/: index.html
migration/: Cargo.toml
migration/src/: lib.rs  m20241127_000001_create_user_table.rs  main.rs
src/: api.rs  lib.rs  main.rs  state.rs
src/auth/: authenticator.rs  jwt.rs  ldap.rs  mod.rs  revocation.rs
src/core/: error.rs  mod.rs  monitor.rs  orchestrator.rs  query.rs  ratelimit.rs  transaction.rs  validation.rs
src/core/blackbox/: db.rs  disk.rs  mod.rs
src/core/orchestrator/: mod.rs  redis.rs
src/core/queue/: memory.rs  mod.rs  redis.rs
src/models/: user.rs
src/persistence/: mod.rs  seaorm.rs
src/persistence/seaorm/: entity.rs  mod.rs  support.rs
src/pulse/: memory.rs  mod.rs  redis.rs
src/services/: mod.rs  recovery_service.rs  user_service.rs
src/store/: memory.rs  mod.rs  redis.rs
src/web/: mod.rs
tests/: 01_integrity.rs  02_cli.sh  03_migrations.sh  04_security.sh  05_recovery.sh  06_gauntlet.sh  07_idempotency.sh  07_marathon.sh  08_toxic.sh  gauntlet_report.txt
