[package]
name = "pulse_core"
version = "0.2.2"
edition = "2021"

[workspace]
members = [".", "migration", "cli", "dashboard"]

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
tokio = { version = "1.48", features = ["full", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# [OPT] Bincode para serialización binaria ultra-rápida
bincode = "1.3"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock"] }
utoipa = { version = "5.4", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
dashmap = "6.1"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-actix-web = "0.7.19"
# [OPT] Allocator de alto rendimiento (debe ser activado en el binario final)
mimalloc = "0.1.48"
sysinfo = "0.37.2"
futures = "0.3.31"
thiserror = "2.0.17"
async-trait = "0.1.89"

migration = { path = "migration" }

deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }

# [OPT] Optimizaciones de Compilador
[profile.release]
opt-level = 3       # Máxima optimización
lto = "fat"         # Link Time Optimization completo (Inline entre crates)
codegen-units = 1   # Reduce paralelismo de compilación para mejor código final
panic = "abort"     # Elimina unwind tables (Binario más pequeño y rápido)
strip = true        # Elimina símbolos de debug
