[package]
name = "pulse-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
anyhow = "1.0"
console_error_panic_hook = "0.1"
